kubernetes/core/gravity/sts.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: gravity
  annotations:
    reloader.stakater.com/auto: "true"
  name: gravity
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gravity
  serviceName: "gravity"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gravity
    spec:
      hostname: gravity-dns-03
      containers:
        - name: gravity
          image: ghcr.io/beryju/gravity:v0.28.1
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: http-metrics
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: http-metrics
          ports:
            - containerPort: 53
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 8008
              name: http
            - containerPort: 8009
              name: http-metrics
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
