kubernetes/core/gravity/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gravity
  annotations:
    lbipam.cilium.io/ips: "10.0.10.17"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gravity
  ports:
    - port: 8008
      name: http
      targetPort: 8008
    - port: 8009
      name: metrics
      targetPort: 8009
