kubernetes/core/gravity/http-route.yml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gravity
spec:
  hostnames: ["gravity-dns-03.chkpwd.com"]
  parentRefs:
    - name: private
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: gravity
          namespace: networking
          port: 8008
